--- a/pagina2.html
+++ b/pagina2.html
@@ -25,6 +25,10 @@
     />
     <link
       rel="stylesheet"
+      href="estilosGlobales.css"
+    />
+    <link
+      rel="stylesheet"
       href="pagina2.css"
     />
   </head>
@@ -34,12 +38,10 @@
       <nav class="navegacion1">
         <a
           href="index.html"
-          class="logo"
+          class="enlaceLogo"
           ><img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
             id="inicio"
         /></a>
@@ -165,13 +167,11 @@
       <nav>
         <a
           href="#inicio"
-          class="logo"
+          class="enlaceLogo"
         >
           <img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
           />
         </a>
