--- a/pagina4.html
+++ b/pagina4.html
@@ -42,12 +42,10 @@
       <nav class="navegacion1">
         <a
           href="index.html"
-          class="logo"
+          class="enlaceLogo"
           ><img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
             id="inicio"
         /></a>
@@ -236,7 +234,6 @@
             </tfoot>
           </table>
         </article>
-        <br />
         <article>
           <!-- Tabla de comparación de los labios -->
           <table>
@@ -354,7 +351,6 @@
             </tfoot>
           </table>
         </article>
-        <br />
         <article>
           <!-- Tabla de comparación de las mascarillas -->
           <table>
@@ -489,7 +485,6 @@
             </tfoot>
           </table>
         </article>
-        <br />
         <article>
           <!-- Tabla de comparación de las uñas -->
           <table>
@@ -633,13 +628,11 @@
       <nav>
         <a
           href="#inicio"
-          class="logo"
+          class="enlaceLogo"
         >
           <img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
           />
         </a>
