--- a/pagina5.html
+++ b/pagina5.html
@@ -25,6 +25,10 @@
     />
     <link
       rel="stylesheet"
+      href="estilosGlobales.css"
+    />
+    <link
+      rel="stylesheet"
       href="pagina5.css"
     />
   </head>
@@ -34,12 +38,10 @@
       <nav class="navegacion1">
         <a
           href="index.html"
-          class="logo"
+          class="enlaceLogo"
           ><img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
             id="inicio"
         /></a>
@@ -601,20 +603,17 @@
           <em> ¡Gracias! Pronto podrás disfrutar de tu presupuesto. </em>
         </p>
       </form>
-      <hr />
     </main>
     <!-- Pie de la página donde aparecen las redes sociales -->
     <footer>
       <nav>
         <a
           href="#inicio"
-          class="logo"
+          class="enlaceLogo"
         >
           <img
             src="imagenes/logo.png"
             alt="Logo DivasMakeUp"
-            width="100"
-            height="100"
             title="Logo DivasMakeUp"
           />
         </a>
