--- a/pagina1.html
+++ b/pagina1.html
@@ -1,170 +1,90 @@
 <!DOCTYPE html>
 <html lang="es-ES">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <meta
-      name="author"
-      content="Celia"
-    />
-    <meta
-      name="description"
-      content="Lugar donde encontrarnos y contactar con nosotras"
-    />
-    <meta
-      name="keywords"
-      content="maps, facebook, tiktok"
-    />
-    <title>¿Donde estamos?</title>
-    <link
-      rel="icon"
-      href="imagenes/logo.png"
-    />
-    <link
-      rel="stylesheet"
-      href="pagina1.css"
-    />
-  </head>
-  <body>
-    <!-- Cabecera de la página donde aparece el logo y la navegacion -->
-    <header>
-      <nav class="navegacion1">
-        <a
-          href="index.html"
-          class="logo"
-          ><img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-            id="inicio"
-        /></a>
-        <a href="presentacion.html">Presentación</a>
 
-        <a href="pagina2.html"> ¿Quiénes somos?</a>
-        <a href="pagina3.html"> Tienda</a>
-        <a href="pagina4.html">Comparador</a>
-        <a href="pagina5.html">Presupuesto</a>
-      </nav>
-      <nav class="navegacion2">
-        <a href="pagina1.html">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-shop"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"
-            /></svg
-        ></a>
-        <a href="pagina6.html">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-envelope"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"
-            /></svg
-        ></a>
-        <a href="pagina7.html">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-question-lg"
-            viewBox="0 0 16 16"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14"
-            /></svg
-        ></a>
-      </nav>
-    </header>
-    <!-- Cuerpo de la página donde aparece el contenido -->
-    <main>
-      <!-- Parte donde aparece el lugar de la tienda y la dirección -->
-      <h1>¿Dónde estamos?</h1>
-      <section>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3199.2994833748994!2d-4.46281172511031!3d36.69134067382996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f9c45623d2c3%3A0x7a634bd28c0cf953!2sMEDAC%20Nova%20%F0%9F%A5%87%20Centro%20Tecnol%C3%B3gico%20de%20FP!5e0!3m2!1ses!2ses!4v1737686480984!5m2!1ses!2ses"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-        <p>
-          <strong>Dirección: </strong>
-          <em>Av. de Isaac Peral, 44, Carretera de Cádiz, 29004 Málaga </em>
-        </p>
-      </section>
-      <hr />
-    </main>
-    <!-- Pie de la página donde aparecen las redes sociales -->
-    <footer>
-      <nav>
-        <a
-          href="#inicio"
-          class="logo"
-        >
-          <img
-            src="imagenes/logo.png"
-            alt="Logo DivasMakeUp"
-            title="Logo DivasMakeUp"
-          />
-        </a>
-        <a
-          href="https://www.instagram.com/"
-          target="_blank"
-        >
-          <img
-            src="icons/instagram.svg"
-            alt="Logo de Instagram"
-            title="Logo Insta"
-          />
-        </a>
-        <a
-          href="https://www.tiktok.com/"
-          target="_blank"
-        >
-          <img
-            src="icons/tiktok.svg"
-            alt="Logo de Tiktok"
-            title="Logo Tiktok"
-          />
-        </a>
-        <a
-          href="https://www.youtube.com/"
-          target="_blank"
-        >
-          <img
-            src="icons/youtube.svg"
-            alt="Logo de YouTube"
-            title="Logo Youtube"
-          />
-        </a>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Celia" />
+  <meta name="description" content="Lugar donde encontrarnos y contactar con nosotras" />
+  <meta name="keywords" content="maps, facebook, tiktok" />
+  <title>¿Donde estamos?</title>
+  <link rel="icon" href="imagenes/logo.png" />
+  <link rel="stylesheet" href="estilosGlobales.css">
+  <link rel="stylesheet" href="pagina1.css" />
+</head>
 
+<body>
+  <!-- Cabecera de la página donde aparece el logo y la navegacion -->
+  <header>
+    <nav class="navegacion1">
+      <a href="index.html" class="enlaceLogo"><img src="imagenes/logo.png" alt="Logo DivasMakeUp" title="Logo DivasMakeUp"
+          id="inicio" /></a>
+      <a href="presentacion.html">Presentación</a>
+
+      <a href="pagina2.html"> ¿Quiénes somos?</a>
+      <a href="pagina3.html"> Tienda</a>
+      <a href="pagina4.html">Comparador</a>
+      <a href="pagina5.html">Presupuesto</a>
+    </nav>
+    <nav class="navegacion2">
+      <a href="pagina1.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-shop"
+          viewBox="0 0 16 16">
+          <path
+            d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z" />
+        </svg></a>
+      <a href="pagina6.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope"
+          viewBox="0 0 16 16">
+          <path
+            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+        </svg></a>
+      <a href="pagina7.html">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-lg"
+          viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+            d="M4.475 5.458c-.284 0-.514-.237-.47-.517C4.28 3.24 5.576 2 7.825 2c2.25 0 3.767 1.36 3.767 3.215 0 1.344-.665 2.288-1.79 2.973-1.1.659-1.414 1.118-1.414 2.01v.03a.5.5 0 0 1-.5.5h-.77a.5.5 0 0 1-.5-.495l-.003-.2c-.043-1.221.477-2.001 1.645-2.712 1.03-.632 1.397-1.135 1.397-2.028 0-.979-.758-1.698-1.926-1.698-1.009 0-1.71.529-1.938 1.402-.066.254-.278.461-.54.461h-.777ZM7.496 14c.622 0 1.095-.474 1.095-1.09 0-.618-.473-1.092-1.095-1.092-.606 0-1.087.474-1.087 1.091S6.89 14 7.496 14" />
+        </svg></a>
+    </nav>
+  </header>
+  <!-- Cuerpo de la página donde aparece el contenido -->
+  <main>
+    <!-- Parte donde aparece el lugar de la tienda y la dirección -->
+    <h1>¿Dónde estamos?</h1>
+    <section>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3199.2994833748994!2d-4.46281172511031!3d36.69134067382996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72f9c45623d2c3%3A0x7a634bd28c0cf953!2sMEDAC%20Nova%20%F0%9F%A5%87%20Centro%20Tecnol%C3%B3gico%20de%20FP!5e0!3m2!1ses!2ses!4v1737686480984!5m2!1ses!2ses"
+        width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
       <p>
-        <q
-          ><em
-            >La belleza comienza en el momento en el que decides ser tú
-            misma.</em
-          ></q
-        >
+        <strong>Dirección: </strong>
+        <em>Av. de Isaac Peral, 44, Carretera de Cádiz, 29004 Málaga </em>
       </p>
-    </footer>
-  </body>
+    </section>
+    <hr />
+  </main>
+  <!-- Pie de la página donde aparecen las redes sociales -->
+  <footer>
+    <nav>
+      <a href="#inicio" class="enlaceLogo">
+        <img src="imagenes/logo.png" alt="Logo DivasMakeUp" title="Logo DivasMakeUp" />
+      </a>
+      <a href="https://www.instagram.com/" target="_blank">
+        <img src="icons/instagram.svg" alt="Logo de Instagram" title="Logo Insta" />
+      </a>
+      <a href="https://www.tiktok.com/" target="_blank">
+        <img src="icons/tiktok.svg" alt="Logo de Tiktok" title="Logo Tiktok" />
+      </a>
+      <a href="https://www.youtube.com/" target="_blank">
+        <img src="icons/youtube.svg" alt="Logo de YouTube" title="Logo Youtube" />
+      </a>
+    </nav>
+
+    <p>
+      <q><em>La belleza comienza en el momento en el que decides ser tú
+          misma.</em></q>
+    </p>
+  </footer>
+</body>
+
 </html>
